--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* sets styling for all elements on the page  */
 body {
   margin: 0 auto;
   background-color: black;
@@ -5,32 +6,42 @@ body {
   width: 90%;
   font-family: "Asap", sans-serif;
 }
+/* setting the flow of the content saved in the main element of the web page */
 main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: 20px;
 }
-
+/* manually centers the image */
 img {
   margin-left: 420px;
   height: 700px;
   width: 400px;
 }
+/*  styles the nav bar at the top */
 nav {
   background-color: darkslategrey;
   display: flex;
   justify-content: space-around;
 }
-nav a {
+/* styling the links in the nav and footer */
+nav a,
+footer a {
   font-weight: 700;
+  text-decoration: none;
 }
+nav a:hover,
+footer a:hover {
+  color: firebrick;
+}
+/* group styling for titles and nav text */
 nav a,
 h1,
 h2 {
-  text-decoration: none;
   color: teal;
 }
+/* ensuring all items are centered */
 h1,
 section {
   display: flex;
@@ -38,20 +49,16 @@ section {
   justify-content: center;
   align-items: center;
 }
+/* styling the page breaks */
 hr {
   color: teal;
   width: 90%;
 }
-
+/* styling for footer elements */
 footer {
   margin-bottom: 20px;
 }
 
 footer a {
-  font-weight: 700;
-  text-decoration: none;
   color: darkslategrey;
 }
-/* font-family: 'Abril Fatface', cursive;
-font-family: 'Asap Condensed', sans-serif;
-font-family: 'Lobster', cursive; */
