--- a/style.css
+++ b/style.css
@@ -1,64 +1,52 @@
-/* sets styling for all elements on the page  */
+/* sets styling for all elements on the page */
 body {
   margin: 0 auto;
   background-color: black;
   color: white;
-  width: 90%;
+  width: 70%;
   font-family: "Asap", sans-serif;
+  text-align: center;
 }
-/* setting the flow of the content saved in the main element of the web page */
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 20px;
-}
-/* manually centers the image */
-img {
-  margin-left: 420px;
-  height: 700px;
-  width: 400px;
-}
-/*  styles the nav bar at the top */
+/* styles the navigation */
 nav {
   background-color: darkslategrey;
   display: flex;
   justify-content: space-around;
 }
-/* styling the links in the nav and footer */
+/* styling the text of the nav and footer links */
 nav a,
 footer a {
   font-weight: 700;
   text-decoration: none;
 }
+/* setting emphasis on nav and footer links when hovered  */
 nav a:hover,
 footer a:hover {
   color: firebrick;
 }
-/* group styling for titles and nav text */
+/* color styling for all headings and nav links */
 nav a,
 h1,
-h2 {
+h2,
+h3 {
   color: teal;
 }
-/* ensuring all items are centered */
-h1,
-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+/* sizing header image */
+header img {
+  height: 400px;
 }
-/* styling the page breaks */
+/* styling page break */
 hr {
   color: teal;
   width: 90%;
 }
-/* styling for footer elements */
-footer {
-  margin-bottom: 20px;
+/* styling all section lists */
+section li {
+  list-style-position: inside;
+  padding: 5px;
 }
-
+/* styling footer links */
 footer a {
   color: darkslategrey;
+  padding-bottom: 10px;
 }
